--- a/.github/workflows/quality-check.yml
+++ b/.github/workflows/quality-check.yml
@@ -18,4 +18,4 @@ jobs:
           echo "🤖 Starting the tests..."
           echo "Checking for bugs..."
           # This is where a real test command like 'npm test' would go
-          echo "✅ Tests passed!"
+          exit 1
